<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="40dp"
        android:layout_height="28dp"
        android:layout_marginStart="355dp"
        android:layout_marginLeft="355dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/u"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/u" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="281dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="414dp"
        android:layout_marginEnd="114dp"
        android:layout_marginRight="114dp"
        android:text="@string/continue_learning"
        android:textColor="#3aaf44"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:layout_width="410dp"
        android:layout_height="177dp"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="413dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.806">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="91dp"
                    android:layout_height="101dp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="20sp"


                    android:layout_marginBottom="20sp"
                    android:background="#FFFFFF"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/physics" />

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:gravity="center"
                    android:text="@string/physics"
                    android:textColor="#3aaf44" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15sp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="91dp"
                    android:layout_height="101dp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="20sp"


                    android:layout_marginBottom="20sp"
                    android:background="#FFFFFF"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/physics" />

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:gravity="center"
                    android:text="@string/arabic"
                    android:textColor="#3aaf44" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15sp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="91dp"
                    android:layout_height="101dp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="20sp"


                    android:layout_marginBottom="20sp"
                    android:background="#FFFFFF"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/physics" />

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:gravity="center"
                    android:text="@string/algebra"
                    android:textColor="#3aaf44" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15sp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="91dp"
                    android:layout_height="101dp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="20sp"


                    android:layout_marginBottom="20sp"
                    android:background="#FFFFFF"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/physics" />

                <TextView
                    android:id="@+id/text5"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:gravity="center"
                    android:text="@string/geometry"
                    android:textColor="#3aaf44" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10sp"
                android:layout_marginBottom="5sp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="91dp"
                    android:layout_height="101dp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="20sp"


                    android:layout_marginBottom="20sp"
                    android:background="#FFFFFF"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/physics" />

                <TextView
                    android:id="@+id/text6"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:gravity="center"
                    android:text="@string/chemistry"
                    android:textColor="#3aaf44" />
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="176dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="219dp"
        android:layout_marginRight="219dp"
        android:layout_marginBottom="681dp"
        android:text="@string/moallem"
        android:textColor="#3aaf44"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="326dp"
        android:layout_marginRight="326dp"
        android:layout_marginBottom="645dp"
        android:text="@string/subjects"
        android:textColor="#3aaf44"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="281dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="365dp"
        android:layout_marginEnd="114dp"
        android:layout_marginRight="114dp"
        android:text="@string/welceome_back"
        android:textColor="#3aaf44"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:layout_width="413dp"
        android:layout_height="233dp"
        android:layout_marginTop="467dp"
        android:layout_marginBottom="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <VideoView
                android:id="@+id/videoView"
                android:layout_width="397dp"
                android:layout_height="224dp"
                android:layout_marginStart="324dp"
                android:layout_marginLeft="324dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <VideoView
                android:id="@+id/videoView2"
                android:layout_width="316dp"
                android:layout_height="226dp"
                android:layout_marginEnd="401dp"
                android:layout_marginRight="401dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="68dp"
                android:layout_height="73dp"
                android:layout_marginStart="115dp"
                android:layout_marginLeft="115dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="207dp"
                android:layout_marginRight="207dp"
                android:layout_marginBottom="100dp"
                android:background="#FFFFFF"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.903"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/b" />

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="68dp"
                android:layout_height="73dp"
                android:layout_marginStart="120dp"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="71dp"
                android:layout_marginEnd="533dp"
                android:layout_marginRight="533dp"
                android:layout_marginBottom="89dp"
                android:scaleType="centerCrop"
                android:background="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/b" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>